# myrient-sync

./: .gitignore  LICENSE  README.md  excludes.txt  pyproject.toml
myrient_sync/: __main__.py  myrient_sync.py
