[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "myrient-sync"
version = "1.0.0"
authors = [
  { name="Luke McCarthy", email="luke@iogopro.co.uk" },
]
description = "Syncronise Myrient to a local directory"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "bs4",
    "requests",
    "progress",
]

[project.scripts]
myrient-sync = "myrient_sync.myrient_sync:main"
